--- a/WebContent/scss/_offer.scss
+++ b/WebContent/scss/_offer.scss
@@ -2,7 +2,7 @@
 ============================================================================================ */
 
 .offer_area {
-    background: url(../img/offer-bg.png) no-repeat center;
+    background: url(../img/banner/man.jpg) no-repeat center;
     background-size: cover;
     @media (max-width: 991px) {
         background: $offwhite;
